--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,1 +1,4 @@
-<h1>This is the start of simple book. Huzzah.</h1>
+<app-nav></app-nav>
+<div class="container" style="margin-top: 100px">
+  <app-calendar></app-calendar>
+</div>
