--- a/client/src/app/calendar/calendar.component.html
+++ b/client/src/app/calendar/calendar.component.html
@@ -1,14 +1,21 @@
-<div class="container">
-  <div class="d-flex justify-content-center align-items-center">
-    <button class="btn btn-primary me-4">
-      <i class="bi bi-arrow-left"></i>
-    </button>
-    <h1>{{ selectedMonth }} - {{ selectedYear }}</h1>
-    <button class="btn btn-primary ms-4">
-      <i class="bi bi-arrow-right"></i>
-    </button>
-  </div>
-  <div *ngFor="let date of dateRange">
-    {{ date.getDate() }}
+<div class="d-flex justify-content-center align-items-center">
+  <button class="btn btn-primary me-4">
+    <i class="bi bi-arrow-left"></i>
+  </button>
+  <h1>{{ selectedMonth }} - {{ selectedYear }}</h1>
+  <button class="btn btn-primary ms-4">
+    <i class="bi bi-arrow-right"></i>
+  </button>
+</div>
+
+<div class="calendar-grid mt-4">
+  <div class="row" *ngFor="let dateBatch of dateBatches">
+    <div
+      class="calendar-grid-item col-md-1"
+      style="border: 1px double black; width: 150px; height: 100px"
+      *ngFor="let date of dateBatch.dates"
+    >
+      {{ date | date : "dd" }}
+    </div>
   </div>
 </div>
