--- a/client/src/app/calendar-item/calendar-item.component.html
+++ b/client/src/app/calendar-item/calendar-item.component.html
@@ -1,3 +1,8 @@
-<div class="calendar-grid-item col-md-1">
-  {{ date | date : "dd" }}
+<div class="calendar-item card">
+  <div class="card-body">
+    <div class="card-title fw-light">
+      {{ date | date : "d - EEE" }}
+    </div>
+    <!-- <h5 class="card-title">{{ date | date : "d - EEE" }}</h5> -->
+  </div>
 </div>
