--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
   <div class="container">
     <a class="navbar-brand" routerLink="/" routerLinkActive="active"
-      ><span class="display-6"
+      ><span class="logo display-6"
         >Simple Book <i class="bi bi-calendar4-week ms-2"></i></span
     ></a>
   </div>
