--- a/client/src/app/calendar-item/calendar-item.component.css
+++ b/client/src/app/calendar-item/calendar-item.component.css
@@ -9,3 +9,8 @@
   transform: scale(1.05);
   background-color: rgb(232, 238, 247);
 }
+
+.card {
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
+}
