refactored font family to apply globally

--- a/client/src/app/calendar/calendar.component.html
+++ b/client/src/app/calendar/calendar.component.html
@@ -5,7 +5,7 @@
   <select
     class="form-select form-select-md me-3 w-25"
     [(ngModel)]="selectedMonth"
-    (change)="onMonthSelected($event)"
+    (change)="onMonthSelected()"
   >
     <option value="" class="fw-light" selected disabled hidden>
       <span class="fw-light">Select a month ...</span>
