added form control entity to solution

--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <a class="navbar-brand" routerLink="/" routerLinkActive="active"
       ><span class="logo display-6"
-        >Simple Book <i class="bi bi-calendar4-week ms-2"></i></span
+        >Simple Book <i class="bi bi-spellcheck ms-1"></i></span
     ></a>
   </div>
 </nav>
