--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,8 +1,46 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
   <div class="container">
-    <a class="navbar-brand" routerLink="/" routerLinkActive="active"
+    <a class="navbar-brand ms-3" routerLink="/" routerLinkActive="active"
       ><span class="logo display-6"
-        >Simple Book <i class="bi bi-spellcheck ms-1"></i></span
+        >VerifySimply <i class="bi bi-spellcheck ms-1"></i></span
     ></a>
   </div>
+  <div
+    class="dropdown"
+    *ngIf="userService.currentUser$ | async as user"
+    dropdown
+  >
+    <a
+      class="dropdown-toggle text-light text-decoration-none me-5"
+      dropdownToggle
+      >Welcome {{ user.username }}</a
+    >
+    <div class="dropdown-menu" *dropdownMenu>
+      <a routerLink="/member/edit" class="dropdown-item">Edit Profile</a>
+      <a class="dropdown-item" (click)="logout()">Logout</a>
+    </div>
+  </div>
+  <form
+    *ngIf="!(userService.currentUser$ | async)"
+    #loginForm="ngForm"
+    class="d-flex w-50"
+    (ngSubmit)="login()"
+    autocomplete="off"
+  >
+    <input
+      name="username"
+      [(ngModel)]="model.username"
+      class="form-control me-2"
+      type="text"
+      placeholder="Username"
+    />
+    <input
+      name="password"
+      [(ngModel)]="model.password"
+      class="form-control me-3"
+      type="password"
+      placeholder="Password"
+    />
+    <button class="btn btn-success me-5" type="submit">Login</button>
+  </form>
 </nav>
