--- a/client/src/app/app.component.css
+++ b/client/src/app/app.component.css
@@ -1,7 +1,7 @@
 .container {
   margin-top: 100px;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: left;
+  align-items: left;
   width: 100%;
 }
