--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,4 +1,6 @@
 <app-nav></app-nav>
 <div class="container">
-  <router-outlet></router-outlet>
+  <div class="mw-100">
+    <router-outlet></router-outlet>
+  </div>
 </div>
