--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -3,7 +3,7 @@
   <hr style="color: rgba(171, 183, 183)" />
   <div>Access your form templates to view, edit or delete your layout.</div>
 </div>
-<div class="row mb-3">
+<div class="row mb-3" routerLink="/clients">
   <div class="col"><h3>Clients</h3></div>
   <hr style="color: rgba(171, 183, 183)" />
   <div>Access client information to view, edit or delete your clients.</div>
