--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,6 +1,4 @@
 <app-nav></app-nav>
-<div class="container">
-  <div class="mw-100">
-    <router-outlet></router-outlet>
-  </div>
+<div class="container-fluid p-5 mt-5 w-75">
+  <router-outlet></router-outlet>
 </div>
