--- a/client/src/app/form/form.component.html
+++ b/client/src/app/form/form.component.html
@@ -1,6 +1,6 @@
 <h1 class="mb-3">Form Configuration</h1>
 
-<form #loginForm="ngForm">
+<form #loginForm="ngForm" class="w-75">
   <div class="row mb-4">
     <div class="col-6">
       <label for="name" class="mb-2"
@@ -38,25 +38,20 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let control of form?.controls">
+          <tr
+            *ngFor="let control of form?.controls"
+            (click)="onControlClicked(control.id)"
+          >
             <td>{{ control.name }}</td>
             <td>{{ control.type }}</td>
           </tr>
-          <!-- <tr>
-            <td>hi</td>
-            <td>hi</td>
-          </tr>
-          <tr>
-            <td>hi</td>
-            <td>hi</td>
-          </tr> -->
         </tbody>
       </table>
     </div>
   </div>
-  <div class="row justify-content-end">
+  <div class="row mt-3">
     <div class="col-3">
-      <button class="btn btn-success">Save</button>
+      <button class="btn btn-success">SAVE</button>
     </div>
   </div>
 </form>
