--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
   <div class="container">
-    <a class="navbar-brand ms-3" routerLink="/" routerLinkActive="active"
+    <a class="navbar-brand ms-3" routerLink="/home" routerLinkActive="active"
       ><span class="logo display-6"
         >VerifySimply <i class="bi bi-spellcheck ms-1"></i></span
     ></a>
