--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -2,4 +2,18 @@
 body {
   font-family: "Roboto", sans-serif;
   font-weight: 300;
+  background-color: #ffffff;
+}
+
+th {
+  font-weight: bold;
+}
+
+td {
+  font-size: 120%;
+  cursor: pointer;
+}
+
+button {
+  letter-spacing: 3px;
 }
