--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="row mb-3" routerLink="/forms">
-  <div class="col"><h3>Forms</h3></div>
+  <div class="col"><h3>Templates</h3></div>
   <hr style="color: rgba(171, 183, 183)" />
   <div>Access your form templates to view, edit or delete your layout.</div>
 </div>
@@ -7,14 +7,4 @@
   <div class="col"><h3>Clients</h3></div>
   <hr style="color: rgba(171, 183, 183)" />
   <div>Access client information to view, edit or delete your clients.</div>
-</div>
-<div class="row mb-3">
-  <div class="col"><h3>Open Files</h3></div>
-  <hr style="color: rgba(171, 183, 183)" />
-  <div>here goes the form instances that were recently accessed ..</div>
-</div>
-<div class="row">
-  <div class="col"><h3>Closed Files</h3></div>
-  <hr style="color: rgba(171, 183, 183)" />
-  <div>here goes the form instances that were recently accessed ..</div>
 </div>
