--- a/client/src/app/clients/clients.component.html
+++ b/client/src/app/clients/clients.component.html
@@ -2,12 +2,15 @@
 <table class="table table-striped table-hover table-responsive">
   <thead>
     <tr>
-      <th scope="col" class="display-6">Name</th>
-      <th scope="col" class="display-6">Address</th>
+      <th scope="col">Name</th>
+      <th scope="col">Address</th>
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let client of clients; let i = index" routerLink="/client">
+    <tr
+      *ngFor="let client of clients; let i = index"
+      routerLink="/client/{{ client.id }}"
+    >
       <td>{{ client?.name }}</td>
       <td>{{ client?.address }}</td>
     </tr>
