--- a/client/src/app/form-control/form-control.component.html
+++ b/client/src/app/form-control/form-control.component.html
@@ -1,90 +1,133 @@
-<h1 class="mb-3">Form Control Configuration</h1>
-<form #controlForm="ngForm">
-  <div class="row mb-4">
-    <div class="col-4">
-      <label for="name" class="mb-2"
-        >Name<i class="bi bi-card-text ms-2"></i
-      ></label>
-      <input
-        id="name"
-        type="text"
-        class="form-control"
-        [value]="control?.name"
-      />
-    </div>
-    <div class="col-4">
-      <label for="description" class="mb-2"
-        >Description<i class="bi bi-card-text ms-2"></i
-      ></label>
-      <input
-        id="description"
-        type="text"
-        class="form-control"
-        [value]="control?.description"
-      />
-    </div>
-    <div class="col-4">
-      <label for="type" class="mb-2"
-        >Type<i class="bi bi-list-ul ms-2"></i
-      ></label>
-      <select id="type" class="form-control">
-        <option *ngFor="let type of inputTypes" [value]="type">
-          {{ type }}
-        </option>
-      </select>
-    </div>
+<div class="row mb-2">
+  <div class="col">
+    <h1 class="mb-3 display-4">
+      Template Control Configuration
+      <span><button class="btn btn-success ms-2">SAVE</button></span>
+    </h1>
   </div>
-  <div class="row mb-4">
-    <div class="col-4">
-      <label for="description" class="mb-2"
-        >Placeholder<i class="bi bi-card-text ms-2"></i
-      ></label>
-      <input
-        id="description"
-        type="text"
-        class="form-control"
-        [value]="control?.description"
-      />
-    </div>
-    <div class="col-4">
-      <label for="label" class="mb-2"
-        >Label<i class="bi bi-card-text ms-2"></i
-      ></label>
-      <input
-        id="label"
-        type="text"
-        class="form-control"
-        [value]="control?.label"
-      />
-    </div>
-    <div class="col-4">
-      <label for="label" class="mb-2"
-        >Order<i class="bi bi-123 ms-2"></i
-      ></label>
-      <input
-        id="label"
-        type="number"
-        class="form-control"
-        [value]="control?.order"
-      />
-    </div>
+</div>
+<div class="row">
+  <div class="col">
+    <form #controlForm="ngForm">
+      <div class="row mb-4 align-items-center">
+        <div class="col">
+          <label for="name" class="mb-2"
+            >Name<i class="bi bi-card-text ms-2"></i
+          ></label>
+          <input
+            id="name"
+            type="text"
+            class="form-control"
+            [value]="control?.name"
+          />
+        </div>
+        <div class="col">
+          <label for="description" class="mb-2"
+            >Description<i class="bi bi-card-text ms-2"></i
+          ></label>
+          <input
+            id="description"
+            type="text"
+            class="form-control"
+            [value]="control?.description"
+          />
+        </div>
+        <div class="col">
+          <label for="type" class="mb-2"
+            >Type<i class="bi bi-list-ul ms-2"></i
+          ></label>
+          <select id="type" class="form-control">
+            <option *ngFor="let type of inputTypes" [value]="type">
+              {{ type }}
+            </option>
+          </select>
+        </div>
+      </div>
+      <div class="row mb-4 align-items-center">
+        <div class="col">
+          <label for="description" class="mb-2"
+            >Placeholder<i class="bi bi-card-text ms-2"></i
+          ></label>
+          <input
+            id="description"
+            type="text"
+            class="form-control"
+            [value]="control?.description"
+          />
+        </div>
+        <div class="col">
+          <label for="label" class="mb-2"
+            >Label<i class="bi bi-card-text ms-2"></i
+          ></label>
+          <input
+            id="label"
+            type="text"
+            class="form-control"
+            [value]="control?.label"
+          />
+        </div>
+        <div class="col">
+          <label for="label" class="mb-2"
+            >Order<i class="bi bi-123 ms-2"></i
+          ></label>
+          <input
+            id="label"
+            type="number"
+            class="form-control"
+            [value]="control?.order"
+          />
+        </div>
+      </div>
+      <div class="row mb-4 align-items-center">
+        <div class="col">
+          <label for="label" class="mb-2"
+            >Section<i class="bi bi-123 ms-2"></i
+          ></label>
+          <input
+            id="label"
+            type="number"
+            class="form-control"
+            [value]="control?.section"
+          />
+        </div>
+        <div class="col">
+          <label for="label" class="mb-2"
+            >Row<i class="bi bi-123 ms-2"></i
+          ></label>
+          <input
+            id="label"
+            type="number"
+            class="form-control"
+            [value]="control?.row"
+          />
+        </div>
+        <div class="col">
+          <label for="label" class="mb-2"
+            >Label<i class="bi bi-card-text ms-2"></i
+          ></label>
+          <input
+            id="label"
+            type="text"
+            class="form-control"
+            [value]="control?.label"
+          />
+        </div>
+      </div>
+      <div class="row mb-4 align-items-center">
+        <div class="col">
+          <label class="form-check-label" for="required"
+            >Required<i class="bi bi-check2-square ms-2"></i
+          ></label>
+          <div class="form-check form-switch">
+            <input
+              class="form-check-input mt-2"
+              type="checkbox"
+              id="required"
+              [checked]="control?.required"
+            />
+          </div>
+        </div>
+      </div>
+    </form>
   </div>
-  <div class="row mb-4">
-    <div class="form-check form-switch">
-      <input
-        class="form-check-input mt-2"
-        type="checkbox"
-        id="required"
-        [checked]="control?.required"
-      />
-      <label class="form-check-label" for="required"
-        >Required<i class="bi bi-toggles ms-2"></i
-      ></label>
-    </div>
-  </div>
-  <div class="row mt-3">
-    <div class="col-3">
-      <button class="btn btn-success" (click)="updateControl()">SAVE</button>
-    </div>
-  </div>
-</form>
+</div>
