--- a/client/src/app/forms/forms.component.html
+++ b/client/src/app/forms/forms.component.html
@@ -1,15 +1,25 @@
-<h1 class="display-4">Templates</h1>
-<table class="table table-striped table-hover table-responsive">
-  <thead>
-    <tr>
-      <th scope="col" class="display-6">Name</th>
-      <th scope="col" class="display-6">Description</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let form of forms" routerLink="/form/{{ form.id }}">
-      <td>{{ form.name }}</td>
-      <td>{{ form.description }}</td>
-    </tr>
-  </tbody>
-</table>
+<div class="row mb-2">
+  <div class="col">
+    <h1 class="display-4">
+      Templates<span><button class="btn btn-success ms-3">ADD</button></span>
+    </h1>
+  </div>
+</div>
+<div class="row">
+  <div class="col">
+    <table class="table table-striped table-hover table-responsive">
+      <thead>
+        <tr>
+          <th scope="col">Name</th>
+          <th scope="col">Description</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let form of forms" routerLink="/form/{{ form.id }}">
+          <td>{{ form.name }}</td>
+          <td>{{ form.description }}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
