--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,12 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
-body {
-  font-family: "Roboto", sans-serif;
-  font-weight: 300;
-  background-color: #ffffff;
-}
-
 th {
-  font-weight: bold;
+  font-size: 150%;
 }
 
 td {
