--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,8 +1,7 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
   <div class="container">
     <a class="navbar-brand ms-3" routerLink="/home" routerLinkActive="active"
-      ><span class="logo display-6"
-        >VerifySimply <i class="bi bi-spellcheck ms-1"></i></span
+      ><span class="logo display-6">ReportJewel <i class="bi bi-gem"></i></span
     ></a>
   </div>
   <div
