include latest updates

--- a/client/src/app/client/client.component.html
+++ b/client/src/app/client/client.component.html
@@ -30,7 +30,7 @@
       />
     </div>
   </div>
-  <div class="row mt-4">
+  <div class="row mt-4 d-flex justify-content-left">
     <div class="col-4">
       <span>
         <button
