--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,10 +1,10 @@
-<div class="row mb-3" routerLink="/forms">
+<div class="row mb-3" routerLink="/form">
   <div class="col"><h3>Templates</h3></div>
-  <hr style="color: rgba(171, 183, 183)" />
+  <hr />
   <div>Access your form templates to view, edit or delete your layout.</div>
 </div>
 <div class="row mb-3" routerLink="/clients">
   <div class="col"><h3>Clients</h3></div>
-  <hr style="color: rgba(171, 183, 183)" />
+  <hr />
   <div>Access client information to view, edit or delete your clients.</div>
 </div>
