--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -1,1 +1,5 @@
-<p>register works!</p>
+<div class="row mb-3">
+  <div class="col"><h3>Register</h3></div>
+  <hr style="color: rgba(171, 183, 183)" />
+  <div>Create a new account and start creating your templates.</div>
+</div>
