--- a/client/src/app/report/report.component.html
+++ b/client/src/app/report/report.component.html
@@ -1,4 +1,9 @@
-<form #reportForm="ngForm">
+<div class="row mb-2 d-flex justify-content-center">
+  <div class="col">
+    <h1>{{ reportForm?.name }} - {{ reportClient?.name }}</h1>
+  </div>
+</div>
+<form #generatedReport="ngForm" class="w-75">
   <div class="row mb-2" *ngFor="let section of reportSections">
     <div class="row" *ngFor="let row of section.rows">
       <div class="col-3" *ngFor="let control of row.controls">
