--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,7 +1,7 @@
-<div class="row mb-3" routerLink="/form">
-  <div class="col"><h3>Templates</h3></div>
+<div class="row mb-3" routerLink="/forms">
+  <div class="col"><h3>Reports</h3></div>
   <hr />
-  <div>Access your form templates to view, edit or delete your layout.</div>
+  <div>Access your reports to view, edit or delete your layout.</div>
 </div>
 <div class="row mb-3" routerLink="/clients">
   <div class="col"><h3>Clients</h3></div>
