--- a/client/src/app/form/form.component.html
+++ b/client/src/app/form/form.component.html
@@ -1,12 +1,18 @@
 <div class="row mb-2">
   <div class="col">
-    <h1 class="display-4">
-      Template Configuration<span
+    <h1 class="mb-3">
+      Report Setting -<span class="ms-2" *ngIf="addMode; else formName"
+        >New</span
+      >
+      <ng-template #formName>
+        <span class="ms-2 fw-bold">{{ form?.name }}</span>
+      </ng-template>
+      <span
         ><button
-          class="btn btn-success ms-3"
+          class="btn btn-success btn-sm ms-3"
           type="submit"
-          form="templateForm"
-          [disabled]="!templateForm.dirty"
+          form="formConfig"
+          [disabled]="!formConfig.dirty"
         >
           SAVE
         </button></span
@@ -14,12 +20,11 @@
     </h1>
   </div>
 </div>
-
 <form
-  id="templateForm"
-  [formGroup]="templateForm"
-  (ngSubmit)="updateForm()"
-  class="w-75"
+  id="formConfig"
+  [formGroup]="formConfig"
+  (ngSubmit)="saveForm()"
+  class="w-75 mb-3"
 >
   <div class="row mb-4">
     <div class="col-6">
@@ -47,26 +52,35 @@
       />
     </div>
   </div>
-  <div class="row">
+  <div class="row" *ngIf="!addMode">
     <div class="col">
-      <h2>Controls<i class="bi bi-card-list ms-3"></i></h2>
+      <h2>
+        Fields<i class="bi bi-card-list ms-3"></i
+        ><span><button class="btn btn-success btn-sm ms-3">ADD</button></span>
+      </h2>
       <table class="table table-striped table-hover table-responsive">
         <thead>
           <tr>
             <th scope="col">Name</th>
             <th scope="col">Type</th>
+            <th scope="col">Description</th>
           </tr>
         </thead>
         <tbody>
           <tr
-            *ngFor="let control of form?.controls"
-            (click)="onControlClicked(control.id)"
+            *ngFor="let control of form?.controls; let i = index"
+            (click)="onControlClicked(i)"
           >
             <td>{{ control.name }}</td>
             <td>{{ control.type }}</td>
+            <td>{{ control.description }}</td>
           </tr>
         </tbody>
       </table>
     </div>
   </div>
 </form>
+<app-form-control *ngIf="controlClicked" [parentForm]="form"></app-form-control>
+<!-- <ng-container *ngIf="controlClicked">
+  <app-form-control [parentForm]="form"></app-form-control>
+</ng-container> -->
