--- a/client/src/app/forms/forms.component.html
+++ b/client/src/app/forms/forms.component.html
@@ -1,7 +1,15 @@
 <div class="row mb-2">
   <div class="col">
     <h1 class="display-4">
-      Templates<span><button class="btn btn-success ms-3">ADD</button></span>
+      Report<span
+        ><button
+          class="btn btn-success ms-3"
+          routerLink="/form"
+          [queryParams]="{ addMode: true }"
+        >
+          ADD
+        </button></span
+      >
     </h1>
   </div>
 </div>
