--- a/client/src/app/form-control/form-control.component.html
+++ b/client/src/app/form-control/form-control.component.html
@@ -1,11 +1,16 @@
 <div class="row mb-2">
   <div class="col">
     <h1 class="mb-3">
-      Field Setting - <span class="fw-bold">{{ control?.name }}</span>
+      Control Setting -
+      <span class="ms-2" *ngIf="addMode; else controlName">New</span>
+      <ng-template #controlName>
+        <span class="ms-2 fw-bold">{{ control?.name }}</span>
+      </ng-template>
       <span
         ><button
+          type="button"
           class="btn btn-success btn-sm ms-3"
-          (click)="updateControl()"
+          (click)="saveControl()"
           [disabled]="!controlForm.dirty"
         >
           SAVE
@@ -41,21 +46,6 @@
             [value]="control?.description"
             formControlName="description"
           />
-        </div>
-        <div class="col">
-          <label for="type" class="mb-2"
-            >Type<i class="bi bi-list-ul ms-2"></i
-          ></label>
-          <select
-            id="type"
-            class="form-control"
-            formControlName="type"
-            [value]="'type'"
-          >
-            <option *ngFor="let type of inputTypes">
-              {{ type }}
-            </option>
-          </select>
         </div>
       </div>
       <div class="row mb-4 align-items-center">
